--- a/app/style/themes/dark.css
+++ b/app/style/themes/dark.css
@@ -81,7 +81,8 @@ body.dark {
 .dark [data-view='new-notebook'] h1,
 .dark [data-view='export-note'] h1,
 .dark [data-view='edit-notebook'] h1,
-.dark [data-view='delete-notebook'] h1{
+.dark [data-view='delete-notebook'] h1,
+.dark [data-view='share'] h1{
 	font-size: 4em;
 	color: #fff;
 	text-align: center;
