--- a/app/style/themes/light.css
+++ b/app/style/themes/light.css
@@ -53,7 +53,8 @@
 .light [data-view='new-notebook'] h1,
 .light [data-view='export-note'] h1,
 .light [data-view='edit-notebook'] h1,
-.light [data-view='delete-notebook'] h1{
+.light [data-view='delete-notebook'] h1,
+.light [data-view='share'] h1{
 	font-size: 4em;
 	text-align: center;
 }
