--- a/app/style/main.css
+++ b/app/style/main.css
@@ -134,12 +134,86 @@ button {
     padding: 8px;
 }
 
-[data-form] [type='submit'],
-[data-form] [type='reset'],
-[data-view="settings"] button{
-	margin: 1em auto;
-	padding: 0.5em;
-	border-radius: 3px;
+.light [data-form] input:not([type="submit"]),
+.light [data-form] select {
+    background-clip: padding-box;
+    background-color: #fff;
+    background-image: linear-gradient(to bottom, #fafafa, #fdfdfd);
+    border: 1px solid rgba(0, 0, 0, 0.22);
+    border-radius: 3px;
+    box-shadow:
+        inset 0 1px 0 0 rgba(0, 0, 0, 0.04),
+        inset 0 0 0 1px rgba(0, 0, 0, 0.02),
+        0 1px 0 1px rgba(255, 255, 255, 0.3);
+    color: #323232;
+    outline: 0;
+    text-shadow: 0 1px rgba(255, 255, 255, 0.4);
+    transition: all 200ms ease-out;
+}
+[data-form] button,
+[data-form] select,
+[data-form] .button {
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    background-color: transparent;
+    background-image: linear-gradient(to bottom, transparent, transparent 50%, rgba(0, 0, 0, 0.04));
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    border-radius: 3px;
+    box-shadow:
+        inset 0 0 0 1px rgba(255, 255, 255, 0.05),
+        inset 0 1px 0 0 rgba(255, 255, 255, 0.45),
+        inset 0 -1px 0 0 rgba(255, 255, 255, 0.15),
+        0 1px 0 0 rgba(255, 255, 255, 0.15);
+    color: #333;
+    cursor: pointer;
+    font-family: inherit;
+    font-size: 16px;
+    margin: 24px auto;
+    outline: none;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    text-shadow: 0 1px rgba(255, 255, 255, 0.4);
+    transition: all 100ms ease-in;
+}
+
+[data-form] button:focus,
+[data-form] .button:focus {
+    border-color: rgba(77, 156, 209, 0.8);
+    box-shadow:
+        inset 0 0 0 1px rgba(255, 255, 255, 0.05),
+        inset 0 1px 0 0 rgba(255, 255, 255, 0.45),
+        inset 0 -1px 0 0 rgba(255, 255, 255, 0.15),
+        0 3px 6px rgba(12, 128, 200, 0.16),
+        0 3px 6px rgba(12, 128, 200, 0.23);
+    text-decoration: none;
+}
+
+[data-form] button:active,
+[data-form] .button:active,
+[data-form] button.active,
+[data-form] .button.active {
+    background-color: rgba(0, 0, 0, 0.05);
+    background-image: none;
+    border-color: rgba(0, 0, 0, 0.25);
+    box-shadow:
+        inset 0 0 0 1px rgba(0, 0, 0, 0.05),
+        0 1px 0 0 rgba(255, 255, 255, 0.3);
+}
+
+[data-form] button.suggested-action,
+[data-form] .button.suggested-action {
+    background-color: #64b9f1;
+    background-image: linear-gradient(to bottom, #4ca7e4, #328ecc);
+    border-color: #337cac;
+    color: #fff;
+    text-shadow: 0 1px rgba(0, 0, 0, 0.3);
+}
+
+[data-modal] textarea {
+	min-width: 50vw;
+	min-height: 30vh;
+	resize: both;
 }
 
 #editor,
@@ -212,11 +286,6 @@ body.dark .side-nav, body.dark .view-nav {
 }
 
 
-body.dark .side-nav h3 {
-    border-top: 1px solid #d3d3d3;
-    padding-top: 0.5em;
-}
-
 .side-nav button, .view-nav button, .notebook-nav button {
     padding: 1em;
     background: transparent;
@@ -234,6 +303,21 @@ textarea {
 	border-bottom: 1px solid rgba(66, 66, 66, 0.5);
 
 }
+
+[data-view='key'] h1,
+[data-view='settings'] h1,
+[data-view='login'] h1,
+[data-view='decrypt'] h1,
+[data-view='new-notebook'] h1,
+[data-view='export-note'] h1,
+[data-view='edit-notebook'] h1,
+[data-view='delete-notebook'] h1,
+[data-view='share'] h1{
+	font-size: 4em;
+	text-align: center;
+	margin-bottom: 0;
+}
+
 ::-webkit-scrollbar {
     background: transparent;
 	width: 6px;
