--- a/app/style/themes/dark.css
+++ b/app/style/themes/dark.css
@@ -1,65 +1,93 @@
+/*
+ * Theme: Dark
+ * Author: Diego Islas Ocampo <hyuchia@gmail.com>
+ */
+
+/*
+ * ==========================================================================
+ * Common Elements Styling
+ * ==========================================================================
+ */
+
 body.dark {
 	color: #fff;
 	background: #262626;
 }
 
-.dark pre {
-	background: transparent;
+.dark a {
+	color: #08c;
 }
 
-.dark .side-nav,
+.dark tr,
+.dark td {
+	border: 1px solid #fafafa;
+}
+
+.dark mark {
+	color: #FFEB3B;
+}
+
+.dark pre {
+	background: transparent;
+	border: 1px solid #333333;
+	color: #e0e0e0;
+}
+
+/*
+ * ==========================================================================
+ * Navigation Styling
+ * ==========================================================================
+ */
+
+.dark .side-nav {
+	box-shadow: 0 3px 12px rgba(0, 0, 0, 0.23), 0 3px 12px rgba(0, 0, 0, 0.16);
+	background: #262626;
+}
+
 .dark .top-nav {
 	background: #232323;
 }
 
-.dark .side-nav h3 {
-    border-top: 1px solid #ddd;
-    padding-top: 0.5em;
-}
-
-.dark .side-nav li:hover,
-.dark .side-nav button:hover {
+.dark .side-nav button:hover,
+.dark .side-nav li:hover {
 	background-color: rgba(0, 0, 0, 0.1);
 }
 
-.dark .top-nav li:hover,
-.dark .top-nav button:hover {
+.dark .top-nav button:hover,
+.dark .top-nav li:hover {
 	color: #1ad6fd;
 }
 
-
-.dark [data-form] input:not([type="submit"]),
-.dark [data-form] select {
-    background-clip: padding-box;
-    background-color: #232323;
-    background-image: linear-gradient(to bottom, #262626, #232323);
-    border: 1px solid rgba(0, 0, 0, 0.22);
-    border-radius: 3px;
-    box-shadow:
-        inset 0 1px 0 0 rgba(0, 0, 0, 0.04),
-        inset 0 0 0 1px rgba(0, 0, 0, 0.02),
-        0 1px 0 1px rgba(0, 0, 0, 0.03);
-    color: #e0e0e0;
-    outline: 0;
-    text-shadow: 0 1px rgba(255, 255, 255, 0.4);
-    transition: all 200ms ease-out;
+.dark .side-nav h3 {
+    border-top: 1px solid #ddd;
 }
 
-.dark input,
-.dark textarea,
-.dark select {
-	background: #232323;
-	color: #e0e0e0;
+/*
+ * ==========================================================================
+ * Modal/Form Elements Styling
+ * ==========================================================================
+ */
+
+.dark [data-modal] {
+
 }
 
 .dark [data-modal] [data-form] {
 	background-color: #262626;
+	box-shadow:
+	   inset 1px 0 0 0 rgba(0, 0, 0, 0.2),
+	   inset -1px 0 0 0 rgba(0, 0, 0, 0.2),
+	   inset 0 1px 0 0 #333,
+	   0 0 0 1px rgba(0, 0, 0, 0.2),
+	   0 10px 20px rgba(0, 0, 0, 0.19),
+	   0 6px 6px rgba(0, 0, 0, 0.23);
 }
 
-.dark [data-form] button,
-.dark [data-form] select,
-.dark [data-form] .button {
-    box-shadow:
+.dark [data-form] button {
+	background-clip: padding-box;
+    background-color: #232323;
+    background-image: linear-gradient(to bottom, #262626, #232323);
+	box-shadow:
         inset 0 0 0 1px rgba(0, 0, 0, 0.05),
         inset 0 1px 0 0 rgba(0, 0, 0, 0.45),
         inset 0 -1px 0 0 rgba(0, 0, 0, 0.15),
@@ -68,12 +96,81 @@ body.dark {
     text-shadow: 0 1px rgba(0, 0, 0, 0.4);
 }
 
-.dark [data-modal] [data-form] {
-	box-shadow:
-	   inset 1px 0 0 0 rgba(0, 0, 0, 0.2),
-	   inset -1px 0 0 0 rgba(0, 0, 0, 0.2),
-	   inset 0 1px 0 0 #333,
-	   0 0 0 1px rgba(0, 0, 0, 0.2),
-	   0 10px 20px rgba(0, 0, 0, 0.19),
-	   0 6px 6px rgba(0, 0, 0, 0.23);
+.dark [data-form] button:focus {
+	border-color: rgba(77, 156, 209, 0.8);
+}
+
+.dark [data-form] button:active {
+	background-color: rgba(0, 0, 0, 0.05);
+    background-image: none;
+    color: inherit;
+    border-color: rgba(0, 0, 0, 0.25);
+}
+
+.dark [data-form] input,
+.dark [data-form] select,
+.dark [data-form] textarea {
+	 background-clip: padding-box;
+     background-color: #232323;
+     background-image: linear-gradient(to bottom, #262626, #232323);
+     border: 1px solid rgba(0, 0, 0, 0.22);
+     border-radius: 3px;
+     box-shadow:
+         inset 0 1px 0 0 rgba(0, 0, 0, 0.04),
+         inset 0 0 0 1px rgba(0, 0, 0, 0.02),
+         0 1px 0 1px rgba(0, 0, 0, 0.03);
+     color: #e0e0e0;
+     outline: 0;
+     text-shadow: 0 1px rgba(255, 255, 255, 0.4);
+     transition: all 200ms ease-out;
+}
+
+.dark [data-form] [type='submit'] {
+	background: #268bd2;
+    color: #fff;
+}
+
+.dark [data-form] [type='reset'] {
+	background: #d53c12;
+	color: #fff;
+}
+
+.dark [data-form] [type='submit']:active {
+	color: #268bd2;
+	border: 1px solid #268bd2;
+}
+
+.dark [data-form] [type='reset']:active {
+	color: #d53c12;
+	border: 1px solid #d53c12;
+}
+
+
+/*
+ * ==========================================================================
+ * Note List Elements Styling
+ * ==========================================================================
+ */
+
+.dark .grid article {
+	background: #232323;
+	color: #fff;
+}
+
+.dark .grid .note-actions {
+	background: rgba(0,0,0,0.2);
+}
+
+.dark .grid .note-actions .fa:hover {
+	background: rgba(0,0,0,0.2);
+}
+
+/*
+ * ==========================================================================
+ * Editor and Preview Elements Styling
+ * ==========================================================================
+ */
+
+.dark [data-action='save'].unsaved {
+	color: #ff1800;
 }
