--- a/app/style/main.css
+++ b/app/style/main.css
@@ -170,9 +170,43 @@ b {
  * ==========================================================================
  */
 
+[data-view='login'] {
+	background: #34aadc;
+	color: #fff;
+}
+
+[data-view='login'] .row {
+	background: #fff;
+	color: #424242;
+}
+
+[data-view='login'] p {
+	font-size: 120%;
+}
+
+[data-view='login'] .row .col:first-child,
+[data-view='share'] .row .col:first-child {
+	border-right: 1px solid rgba(66,66,66,0.5);
+}
+
+[data-view='login'] img {
+	height: 5em;
+	width: 5em;
+	margin-top: 4em;
+	drag: none;
+	user-drag: none;
+}
+
+[data-view='login'] h1,
+[data-view='login'] h2,
+[data-view='share'] h2 {
+	font-weight: bold;
+}
+
 [data-view] .middle {
 	width: 100%;
 	max-height: 100vh;
+	text-align: center;
 }
 
 [data-view="editor"] .side-nav button {
