--- a/app/style/prism.css
+++ b/app/style/prism.css
@@ -7,7 +7,7 @@ pre[class*="language-"] {
 	word-spacing: normal;
 	word-break: normal;
 	line-height: 1.5;
-	font-size: 0.85em;
+	font-size: 0.9rem;
 	-moz-tab-size: 4;
 	-o-tab-size: 4;
 	tab-size: 4;
