--- a/app/style/main.css
+++ b/app/style/main.css
@@ -427,6 +427,7 @@ b {
 #editor h6 {
 	margin: 1rem 0;
     margin-bottom: 1rem;
+    font-size: 1rem;
 }
 
 .video-wrapper iframe,
@@ -547,7 +548,7 @@ b {
         margin: auto;
     }
 
-    h3, h4, h5{
+    h3, h4, h5, h6 {
         font-size: 9pt;
         font-weight: bold;
         margin: auto;
